
0.9.11e Jul 26, 2006
 * added support for downloading compressed ChangeLog.txt.gz
 * updated Polish translation with small updates from Lukasz Stlmach
 * updated documentation (thanks sky@hi.eclipse.co.uk)
 * updated German translation
 * updated FAQ
 * updated pt_PT translation
 * updated japanese translation

0.9.11d May 28, 2006
 * fixed regression in parsing versions in dependencies

0.9.11c May 25, 2006
 * added ChangeLog.txt downloading, --show now shows the changelog entry if present
 * updated patterns to fix version parsing problem with
   apache-1.3.35-i486-2_slack10.2
 * updated zh_CH translation from Yang
 * added http://www.slackware.com/~alien/slackbuilds/ to example.slapt-getrc
 * updated UK and RU translations from Sin
 * simplified Chinese translation by Yang
 * FAQ and FAQ.html updates from Piotr
 * added Japanese translation from S_A
 * updated Portugal translation from Miguel

0.9.11b Feb 19, 2006
 * Bulgarian translation updates from Victor
 * merged patch from Piotr for --config|-c and --download-only|-d shortcuts
 * improved version comparison, falling back on strverscmp rather than strcasecmp.
 * Polish translation updates from Piotr
 * moved previously hardcoded string "Excluding %s, use --ignore-dep to override\n" into translations
 * updated Vietnamese translation from Vu
 * fixed Indonesian translation

0.9.11a Dec 31, 2005
 * updated Bulgarian translation
 * fixed escape character bug (Dan Barber)
 * now preserves access and modification time of downloaded package
 * added Indonesian translation by Kemas Antonius
 * updated Portuguese_Portugal translation from Miguel
 * updated Polish translation from Piotr

0.9.11 Dec 2, 2005
 * added slapt_clean_description() to remove the package name from the
   package description.
 * try to install/upgrade essential packages first
   (glibc-solibs, sed, pkgtools) for dist-upgrade
 * Bulgarian translation by Victor Keranov
 * updated formatting of statistics when --show-stats|-S is in use