@@ -157,7 +157,7 @@ Show the download statistics
 Specify file location of slapt-get configuration.  This overrides the default location, /etc/slapt-get/slapt-getrc.
 .TP
 .B --remove-obsolete
-Remove installed packages that are no longer available.  This works for dist-upgrade only.  This removes packages that are no longer available from any current package sources, but are currently installed.  Be careful as this will also remove custom built packages.  
+Remove installed packages that are no longer available.  This works for dist-upgrade and --remove only.  This removes packages that are no longer available from any current package sources, but are currently installed.  Be careful as this will also remove custom built packages.  
 .TP
 .B --retry []
 Specify the number of retries to attempt if the package download fails.
