@@ -1,5 +1,6 @@
 
 0.9.11e Jul 26, 2006
+ * --remove-obsolete now works with --remove as well as --dist-upgrade
  * added support for downloading compressed ChangeLog.txt.gz
  * updated Polish translation with small updates from Lukasz Stlmach
  * updated documentation (thanks sky@hi.eclipse.co.uk)
